fix jerking on mobile vh -> lvh

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@ html {
 
 /* Next.js root container */
 #__next {
-  @apply flex min-h-screen flex-col font-sans;
+  @apply flex min-h-screen flex-col;
 }
 
 /* Heading styles */
